{WIP] VBS起動の処理を改善